--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react-dom": "^16.6.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "react-textarea-autosize": "^7.1.0-1"
   },
   "homepage": "https://alankuo.github.io/SleepMaster_FamilyHub",
   "scripts": {
