--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ably": "^1.0.18",
     "object-hash": "^1.3.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
