--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-textarea-autosize": "^7.1.0-1",
-    "react-transition-group": "^2.5.0"
+    "react-transition-group": "^2.5.0",
+    "then-request": "^6.0.0"
   },
   "homepage": "https://alankuo.github.io/SleepMaster_FamilyHub",
   "scripts": {
