--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ably": "^1.0.18",
     "object-hash": "^1.3.0",
     "react": "^16.6.0",
+    "react-bootstrap": "^0.32.4",
     "react-cropper": "^1.0.1",
     "react-dom": "^16.6.0",
     "react-router": "^4.3.1",
